[tool.poetry]
name = "textual-inputs"
version = "0.1.14"
homepage = "https://github.com/sirfuzzalot/textual-inputs"
description = "Text Input for Textual"
authors = ["Tom Saunders"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
textual = {path = "../textual/dist/textual-0.1.14.tar.gz"}

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
exclude = 'venv'

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["venv"]
